# cats-vs-dogs-pet-adoption-classification

./: .dockerignore  .flake8  .gitignore  Dockerfile  Final Report.docx  Makefile  README.md  docker-compose.yml  dvc.yaml  mlflow.db  params.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: cd.yml  ci-cd.yml  ci.yml
docs/: ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  SETUP.md
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  service.yaml
k8s/monitoring/: catdog-dashboard.json  grafana-dashboard-configmap.yaml  grafana-dashboard.json  grafana-values.yaml  prometheus-values.yaml  prometheus.yml
scripts/: deploy_k8s.sh  setup_monitoring.sh  simulate_traffic.py  smoke_test.py  train.py
src/: __init__.py  config.py
src/api/: main.py  predict.py  schemas.py
src/data/: __init__.py  dataset.py  download.py  preprocess.py
src/models/: __init__.py  cnn.py  train.py
src/utils/: __init__.py  metrics.py
tests/: conftest.py  test_api.py  test_inference.py  test_preprocess.py
